name:                interventions
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/smorele/interventions#readme
license:             BSD3
license-file:        LICENSE
author:              smorele
maintainer:          sebastien.morele@gmail.com
copyright:           value
category:            POC
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Intervention
  build-depends:       base >= 4.7 && < 5
                      , scotty
                      , aeson  
                      , mongoDB                    
  default-language:    Haskell2010

executable interventions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      , scotty
                      , aeson
                      , text
                      , mongoDB
                      , interventions
  default-language:    Haskell2010

test-suite interventions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interventions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smorele/interventions
